@@ -55,8 +55,14 @@ DebugLevel=3
 # Must be between 1 and 30 
 Timeout=5
 
-# After how many seconds of unavailability treat a host as unavailable
-UnavailablePeriod=20
+# After how many seconds of unreachability treat a host as unavailable
+#UnreachablePeriod=45
+
+# How ofter check host for availability during the unreachability period
+#UnavailableDelay=15
+
+# How ofter check host for availability during the unavailability period
+#UnavailableDelay=60
 
 # Name of PID file
 
