@@ -26,8 +26,9 @@ extern  int     server_num;
 extern  int     CONFIG_TIMEOUT;
 extern  int     CONFIG_POLLER_FORKS;
 extern  int     CONFIG_REFRESH_UNSUPPORTED;
-extern  int     CONFIG_UNAVAILABLE_PERIOD;
 extern  int     CONFIG_UNAVAILABLE_DELAY;
+extern  int     CONFIG_UNREACHABLE_PERIOD;
+extern  int     CONFIG_UNREACHABLE_DELAY;
 
 void main_poller_loop();
 
